--- a/mobile/www/templates/tabs.html
+++ b/mobile/www/templates/tabs.html
@@ -15,6 +15,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="BLE" icon-off="ion-bluetooth" icon-on="ion-bluetooth" href="#/tab/ble">
+    <ion-nav-view name="tab-ble"></ion-nav-view>
+  </ion-tab>
+
   <!-- Account Tab -->
   <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
